# snap-store-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
snap/: snapcraft.yaml
snap/gui/: store-tui.desktop  terminal_icon.xcf
snap_store_tui/: main.py
snap_store_tui/api/snaps/: __init__.py
snap_store_tui/elements/: category_modal.py  clickable_link.py  position_count.py  search_modal.py  snap_modal.py
snap_store_tui/schemas/snaps/: categories.py  info.py  search.py
snap_store_tui/styles/: snap_modal.tcss
store_tui/: main.py  mocked_main.py
store_tui/api/: snaps.py
store_tui/elements/: category_modal.py  clickable_link.py  error_modal.py  install_modal.py  position_count.py  progress_bar_with_message.py  settings_list.py  snap_channel_tree.py  snap_modal.py  snap_result_table.py  utils.py
store_tui/schemas/snaps/: info.py  search.py
store_tui/styles/: category_modal.tcss  error_modal.tcss  install_modal.tcss  main.tcss  snap_modal.tcss
tests/: test_snaps_api.py  test_ui_mock.py
tests/data/: categories_response.json  featured_snaps_response.json  snap_info_response_success.json
tests/notebooks/: freecad_snap_info_response.json  test_get_snap_info.ipynb  test_snaps_api.ipynb
