[tool.poetry]
name = "snap-store-tui"
version = "0.1.0"
description = ""
authors = ["Alexander Lukens <alexdlukens@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["snap", "store", "snapcraft", "tui", "terminal", "cli"]
repository = "https://github.com/alexdlukens/snap-store-tui"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.79.1"
requests = "^2.32.3"
pydantic = "^2.9.1"
rich-pixels = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
textual-dev = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
