[tool.poetry]
name = "store-tui"
version = "0.1.4"
description = ""
authors = ["Alexander Lukens <alexdlukens@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["snap", "store", "snapcraft", "tui", "terminal", "cli"]
repository = "https://github.com/alexdlukens/snap-store-tui"

[tool.poetry.dependencies]
python = "^3.12"
textual = "0.86.2"
pydantic = "^2.9.1"
rich-pixels = "^3.0.1"
humanize = "^4.11.0"
httpx = "^0.27.2"
retry = "^0.9.2"
snap-python = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
textual-dev = "^1.6.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
